--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -84,25 +84,16 @@
 
             <li class="nav-small-cap">
               <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-              <span class="hide-menu">Admins</span>
+              <span class="hide-menu">Customers</span>
             </li>
             <li class="sidebar-item">
               <a class="sidebar-link" href="/users" aria-expanded="false">
                 <span>
                   <i class="ti ti-users"></i>
                 </span>
-                <span class="hide-menu">All Users</span>
+                <span class="hide-menu">All Customers</span>
               </a>
             </li>
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="/add_admin" aria-expanded="false">
-                <span>
-                  <i class="ti ti-user-plus"></i>
-                </span>
-                <span class="hide-menu">Add New Admin</span>
-              </a>
-            </li>
-
 
             {{!-- settings --}}
 
