--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -37,6 +37,8 @@
 
 
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lucide-icons@0.217.0/dist/index.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/sidebarmenu.js"></script>
   <script src="../assets/js/app.min.js"></script>
