--- a/views/orderDetails.hbs
+++ b/views/orderDetails.hbs
@@ -1,1 +1,8 @@
 <h2>Order Details</h2>
+<ol id="orderDetail-list"></ol>
+<script src="./js/orderDetail.js"></script>
+<script>
+    getAllOrderDetails()
+</script>
+
+<h2>Salom</h2>
