--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -80,6 +80,31 @@
                 <span class="hide-menu">Add Discount</span>
               </a>
             </li>
+            <!-- orderDetail -->
+
+            <li class="nav-small-cap">
+  <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+  <span class="hide-menu">Order Details</span>
+</li>
+<li class="sidebar-item">
+  <a class="sidebar-link" href="/allOrderDetails" aria-expanded="false">
+    <span>
+      <i class="ti ti-list"></i>
+    </span>
+    <span class="hide-menu">All Order Details</span>
+  </a>
+</li>
+<li class="sidebar-item">
+  <a class="sidebar-link" href="/addOrderDetail" aria-expanded="false">
+    <span>
+      <i class="ti ti-plus"></i>
+    </span>
+    <span class="hide-menu">Add Order Detail</span>
+  </a>
+</li>
+
+
+            <!-- orderDetail -->
             <!-- users -->
 
             <li class="nav-small-cap">
